libs/bng/test/positive/0032_disconnected_cplx_observables.bngl
# OK

begin molecule types
  A
  D
end molecule types

begin observables
  Molecules X A.D
end observables
