libs/bng/test/negative/N0032_disconnected_cplx_observables.bngl
# FAIL
# OUTPUT: error: All complexes must be currently fully connected, error for 'A.D'.

begin molecule types
  A
  D
end molecule types

begin observables
  Molecules X A.D
end observables
